<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Urgent Call</string>
    <string name="title_activity_main">Urgent Call: Advanced</string>
    <string name="title_activity_settings">Edit Settings</string>
    <string name="action_bug">Report a bug / Suggest features</string>
    <string name="call_time">In this many minutes: </string>
    <string name="call_qty">User must call this many times: </string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_list">Edit user settings&#8230;</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_simple_settings">Settings</string>
    <string name="title_activity_simple_contact_list_display">SimpleContactListDisplay</string>

</resources>
