<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserSettingActivity" >
        
    <TextView
        android:id="@+id/state_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="Alerts for user are:" />
    
    <TextView
        android:id="@+id/call_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/state_on_value"
        android:layout_marginTop="36dp"
        android:text="@string/call_qty" />

    <TextView
        android:id="@+id/call_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/call_qty"
        android:layout_below="@id/call_qty"
        android:layout_marginTop="36dp"
        android:text="@string/call_time" />
    
    <ToggleButton
        android:id="@+id/state_on_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/state_on"
        android:layout_alignParentRight="true" />
    
    <EditText
        android:id="@+id/call_qty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/call_qty"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/call_qty"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/call_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/call_time"
        android:layout_alignBottom="@+id/call_time"
        android:layout_alignLeft="@+id/call_qty_value"
        android:layout_alignRight="@+id/call_qty_value"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save_button"
        android:layout_alignBottom="@+id/save_button"
        android:layout_alignParentLeft="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/save_button"
        android:layout_alignParentRight="true"
        android:text="@string/delete" />


</RelativeLayout>
