<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >
    
    <TextView
        android:id="@+id/simple_call_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="@string/call_qty" />

    <TextView
        android:id="@+id/simple_call_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/simple_call_qty"
        android:layout_below="@id/simple_call_qty"
        android:layout_marginTop="36dp"
        android:text="@string/call_time" />
    
    <EditText
        android:id="@+id/simple_call_qty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/simple_call_qty"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/simple_call_qty"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/simple_call_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/simple_call_time"
        android:layout_alignBottom="@id/simple_call_time"
        android:layout_alignLeft="@id/simple_call_qty_value"
        android:layout_alignRight="@id/simple_call_qty_value"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/simple_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/simple_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/simple_cancel_button"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/simple_custom_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/simple_cancel_button"
        android:layout_centerHorizontal="true"
        android:text="Edit white list..." />

</RelativeLayout>
